test: add unit tests with testify/mock
- Add MailgunClient interface to enable mocking
- Create mailgun_client.go with interface and wrapper implementation
- Generate mocks with mockery v3
- Add comprehensive tests for Exporter:
  - TestNewExporterWithClient
  - TestExporter_Describe
  - TestExporter_Collect_Success
  - TestExporter_Collect_GetDomainsError
  - TestExporter_Collect_GetMetricsError
  - TestExporter_Collect_DomainState
  - TestExporter_Collect_NilMetricValues
- add test job and Makefile targets
  - Add 'make test' target (runs fmt check + go test)
  - Add 'make generate' target (runs mockery)
  - Add test job to CI that runs before binary builds

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -11,8 +11,24 @@ env:
   ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
 
 jobs:
+  # Run tests and format check
+  test:
+    runs-on: self-hosted
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+
+      - name: Run tests
+        run: make test
+
   # Build binaries for multiple platforms
   binary-build:
+    needs: test
     runs-on: self-hosted
     strategy:
       matrix:
