ci: fix tags on container images
Just want version and timestamp-sha

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -115,9 +115,7 @@ jobs:
           images: ghcr.io/${{ github.repository }}
           tags: |
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha,prefix=
+            type=raw,value={{date 'YYYYMMDD[T]HHmmss'}}-{{sha}}
 
       - name: Login to GitHub Container Registry
         if: github.event_name != 'pull_request'
