--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -110,7 +110,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=semver,pattern={{version}}
+            type=semver,pattern=v{{version}}
             type=raw,value={{date 'YYYYMMDD[T]HHmmss'}}-{{sha}}
 
       - name: Login to GitHub Container Registry
